--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
         <!-- Remplacement des balises div par des balises sémantiquement correctes -->
         <!-- header -->
         <!-- Suppression de mots-clefs cachés "black hat" -->
-        <header class="bloc bgc-white l-bloc " id="bloc-0">
+        <header class="bloc bgc-white l-bloc " id="bloc-0" role="navigation" aria-label="primary">
             <div class="container bloc-sm">
                 <nav class="navbar row">
                     <div class="navbar-header">
                         <a class="navbar-brand page-link" href="index.html"><img src="images/la-chouette-agence.jpg"
                                 alt="Page d'accueil La chouette agence - Entreprise web design Lyon" height="40" /></a>
                         <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
-                            data-toggle="collapse" data-target=".navbar-1">
+                            data-toggle="collapse" data-target=".navbar-1" aria-label="menu">
                             <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
                                 class="icon-bar"></span><span class="icon-bar"></span>
                         </button>
@@ -53,7 +53,7 @@
                                 <a class="page-link" href="index.html">Accueil</a>
                             </li>
                             <li>
-                                <a class="page-link" href="contact.html">Contact</a>
+                                <a class="page-link" href="contact.html" title="Contactez-nous !">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -89,7 +89,7 @@
             <!-- bloc-1-presentation END -->
             <!-- bloc-2-services -->
             <!-- Remplacement de deux images de texte par des balises p et blockquote -->
-            <section class="bloc bgc-white l-bloc" id="bloc-2-services">
+            <section class="bloc bgc-white l-bloc" id="bloc-2-services" aria-label="services">
                 <div class="container bloc-md">
                     <div class="row">
                         <div class="col-sm-12 text-center">
@@ -151,7 +151,7 @@
             <!-- Creation d'un h2 + Ecriture du p -->
             <section
                 class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax"
-                id="bloc-3-what-i-do">
+                id="bloc-3-what-i-do" aria-label="collaborer">
                 <div class="container bloc-lg">
                     <div class="row tight-width-whitespace black-background">
                         <div class="col-sm-12">
@@ -175,7 +175,8 @@
             <!-- bloc-3 END -->
             <!-- bloc-4-portfolio -->
             <!-- Creation d'un h2 + remplcement h2 par h3 et réécriture + Réécriture des alt -->
-            <section class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
+            <section class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio"
+                aria-label="réalisations">
                 <div class="container bloc-lg">
                     <div class="row">
                         <hgroup class="col-sm-12 text-center">
@@ -244,7 +245,8 @@
             <!-- bloc-4-portfolio END -->
             <!-- bloc-5 -->
             <!-- Remplacement h2 par p  -->
-            <section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
+            <section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta"
+                aria-label="contact">
                 <div class="container bloc-lg">
                     <div class="cta row">
                         <p id="special">
@@ -264,7 +266,7 @@
         <footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
             <div class="container bloc-sm">
                 <div class="row">
-                    <div class="col-sm-12">
+                    <div class="col-sm-12" aria-label="secondary">
                         <!-- modifiation du texte original, ajout du mot design -->
                         <p class="text-center grey">
                             La chouette agence - Agence webdesign, basée à Lyon<br>
@@ -273,25 +275,33 @@
                         <div class="row row-no-gutters social">
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="http://facebook.com"><img src="images/facebook.jpg"
+                                    <a class="social" href="http://facebook.com" target="_blank"
+                                        title="Retrouvez-nous sur Facebook !"
+                                        aria-label="retrouvez-nous sur Facebook"><img src="images/facebook.jpg"
                                             class="icon-md" alt="icone facebook"></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="http://dribble.com"><img src="images/dribble.jpg"
+                                    <a class="social" href="http://dribble.com" target="_blank"
+                                        title="Retrouvez-nous sur Dribble !"
+                                        aria-label="retrouvez-nous sur Dribble"><img src="images/dribble.jpg"
                                             class="icon-md" alt="icone dribble"></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="http://twitter.com"><img src="images/twitter.jpg"
+                                    <a class="social" href="http://twitter.com" target="_blank"
+                                        title="Retrouvez-nous sur Twitter !"
+                                        aria-label="retrouvez-nous sur Twitter"><img src="images/twitter.jpg"
                                             class="icon-md" alt="icone twitter"></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="http://instagram.com"><img src="images/instagram.jpg"
+                                    <a class="social" href="http://instagram.com" target="_blank"
+                                        title="Retrouvez-nous sur Instagram !"
+                                        aria-label="retrouvez-nous sur Instagram"><img src="images/instagram.jpg"
                                             class="icon-md" alt="icone instagram"></a>
                                 </div>
                             </div>
