--- a/index.html
+++ b/index.html
@@ -24,6 +24,20 @@
     <script src="./js/jquery.touchSwipe.js" defer></script>
     <script src="./js/gmaps.js"></script>
 
+    <!-- Google Analytics -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180705146-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-180705146-1');
+    </script>
+
+
+    <!-- Google search console -->
+
     <title>La chouette agence-Webdesign</title>
 </head>
 <!-- Fin du head -->
