--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,17 @@
     <script src="./js/blocs.js"></script>
     <script src="./js/jquery.touchSwipe.js" defer></script>
     <script src="./js/gmaps.js"></script>
+    <!-- Google analytics -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180705146-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-180705146-1');
+    </script>
+
 
     <title>La chouette agence-Webdesign</title>
 </head>
