--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <!-- Remplacement des balises div par des balises sémantiquement correctes -->
         <!-- header -->
         <!-- Suppression de mots-clefs cachés "black hat" -->
-        <header class="bloc bgc-white l-bloc " id="bloc-0" role="navigation" aria-label="primary">
+        <header class="bloc bgc-white l-bloc " id="bloc-0">
             <div class="container bloc-sm">
                 <nav class="navbar row">
                     <div class="navbar-header">
@@ -277,7 +277,7 @@
         <footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
             <div class="container bloc-sm">
                 <div class="row">
-                    <div class="col-sm-12" aria-label="secondary">
+                    <div class="col-sm-12">
                         <!-- modifiation du texte original, ajout du mot design -->
                         <p class="text-center grey">
                             La chouette agence - Agence webdesign, basée à Lyon<br>
