--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords"
         content="agence webdesign,Lyon,site web,portfolio,illustration,construction site web,entreprise,SEO,référencement">
     <meta name="description"
-        content="La chouette agence est une entreprise de webdesign située à Lyon. Nous sommes à votre disposition pour tous vos projets de web design, de refonte ou simple raffraîchissement, ainsi que pour l'optimisation de votre référencement.">
+        content="La chouette agence est une entreprise de webdesign basée à Lyon, à votre disposition pour tous vos projets de web design, de refonte et d'optimisation SEO.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta name="robots" content="index,follow" />
     <meta name="googlebot" content="index,follow" />
