--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                             <p class="text-center ">
                                 Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour
                                 comprendre vos objectifs commerciaux afin de vous proposer le meilleur design
-                                possible.<br>
+                                possible.
                             </p>
                         </div>
                         <div class="col-sm-4">
