--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
 
         <!-- header -->
 
-        <header class="bloc bgc-white l-bloc " id="bloc-0" aria-label="primary">
+        <header class="bloc bgc-white l-bloc " id="bloc-0">
             <div class="container bloc-sm">
                 <nav class="navbar row">
                     <div class="navbar-header">
@@ -99,8 +99,7 @@
                     <div class="row adress-form">
                         <div class="col-sm-6 form">
                             <h2 class="mg-md text-center tc-grey">Formulaire de contact</h2>
-                            <form id="form_1" method="post" action="traitement_php" novalidate role="form"
-                                aria-label="contact information">
+                            <form id="form_1" method="post" action="traitement_php">
                                 <!--deleted text : success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!"-->
                                 <div class="form-group">
                                     <label for="name">
@@ -160,7 +159,7 @@
         <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
             <div class="container bloc-sm">
                 <div class="row">
-                    <div class="col-sm-12" aria-label="secondary">
+                    <div class="col-sm-12">
                         <p class="text-center black">
                             La chouette agence - Agence web basée à Lyon.<br>
                         </p>
