--- a/contact.html
+++ b/contact.html
@@ -156,7 +156,7 @@
         <!-- <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a> -->
         <!-- ScrollToTop Button END -->
         <!-- Footer - bloc-8 -->
-        <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+        <footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
             <div class="container bloc-sm">
                 <div class="row">
                     <div class="col-sm-12">
@@ -199,7 +199,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </footer>
     </div>
 
     <!-- Footer - bloc-8 END -->
@@ -209,3 +209,5 @@
 
 
 </body>
+
+</html>
