--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta name="robots" content="index,follow" />
     <meta name="googlebot" content="index,follow" />
+    <link rel="canonical" href="https://lachouetteagence.ml/" />
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
