--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta name="robots" content="index,follow" />
     <meta name="googlebot" content="index,follow" />
+    <meta name="google-site-verification" content="MlU8EJDkT5ZBaKXZ5X8lPt5oum1IXNDABWv-pa46TWw" />
     <link rel="canonical" href="https://lachouetteagence.ml/" />
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
