--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
 
         <header class="bloc bgc-white l-bloc " id="bloc-0">
             <div class="container bloc-sm">
-                <nav class="navbar row">
+                <nav class="navbar row" role="banner">
                     <div class="navbar-header">
                         <a class="navbar-brand page-link" href="index.html"><img src="images/la-chouette-agence.jpg"
                                 alt="Page d'accueil La chouette agence - Entreprise web design Lyon" height="40" /></a>
@@ -97,7 +97,7 @@
             <!-- bloc-7 -->
             <section class="bloc bgc-white l-bloc" id="bloc-7">
                 <div class="container bloc-lg">
-                    <div class="row adress-form">
+                    <div class="row adress-form" role="form">
                         <div class="col-sm-6 form">
                             <h2 class="mg-md text-center tc-grey">Formulaire de contact</h2>
                             <form id="form_1" method="post" action="traitement_php">
@@ -158,7 +158,7 @@
         <!-- ScrollToTop Button END -->
         <!-- Footer - bloc-8 -->
         <footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
-            <div class="container bloc-sm">
+            <div class="container bloc-sm" role="contentinfo">
                 <div class="row">
                     <div class="col-sm-12">
                         <p class="text-center black">
