--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <!-- Suppression de mots-clés cachés "black hat" -->
         <header class="bloc bgc-white l-bloc " id="bloc-0">
             <div class="container bloc-sm">
-                <nav class="navbar row">
+                <nav class="navbar row" role="banner">
                     <div class="navbar-header">
                         <a class="navbar-brand page-link" href="index.html"><img src="images/la-chouette-agence.jpg"
                                 alt="Page d'accueil La chouette agence - Entreprise web design Lyon" height="40" /></a>
@@ -277,7 +277,7 @@
         <!-- Footer -->
         <!-- Remplacement des liens + remplacement des icones par images jpg + supression mots-clefs cachés + suppression annuaire 2 + suppression liens non cohérents -->
         <footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
-            <div class="container bloc-sm">
+            <div class="container bloc-sm" role="contentinfo">
                 <div class="row">
                     <div class="col-sm-12">
                         <!-- modifiation du texte original, ajout du mot design -->
@@ -285,7 +285,7 @@
                             La chouette agence - Agence webdesign, basée à Lyon<br>
                         </p>
 
-                        <div class="row row-no-gutters social">
+                        <div class="row row-no-gutters social" role="navigation">
                             <div class="col-sm-3">
                                 <div class="text-center">
                                     <a class="social" href="http://facebook.com" target="_blank"
